# precastro

./: .gitignore  Makefile.am  README.md  capi.i  compile_ephem.py  configure.ac  jdtool  precastro.py  pymod.c
doc/: conf.py.in  index.txt
novas/: checkout-stars-full-usno.txt  eph_manager.c  novas.c  novas.h
sofa/: c2t00a.c  c2t00b.c  c2t06a.c  c2tpe.c  c2txy.c  changes.lis  pom00.c
